sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  var ecart: Int = getNombreValeurs
  var echange_pos:Boolean=false
  do{
    echange_pos=false
    if (ecart>1){
      ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    }
    if (ecart==9||ecart=10){
      ecart=11
    }
    var i=0
    while (i+ecart<getNombreValeurs){
      if (!plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        echange_pos=true
      }
      i=i+1
    }
  }  while (ecart>1||echange_pos==true)
}
